--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,107 @@
+@font-face {
+  font-family: 'open_sansregular';
+  src: url("/fonts/OpenSans/OpenSans-Regular-webfont.eot");
+  src: url("/fonts/OpenSans/OpenSans-Regular-webfont.eot?#iefix") format('embedded-opentype'), url("/fonts/OpenSans/OpenSans-Regular-webfont.woff") format('woff'), url("/fonts/OpenSans/OpenSans-Regular-webfont.ttf") format('truetype'), url("/fonts/OpenSans/OpenSans-Regular-webfont.svg#open_sansregular") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'open_sanslight';
+  src: url("/fonts/OpenSans/OpenSans-Light-webfont.eot");
+  src: url("/fonts/OpenSans/OpenSans-Light-webfont.eot?#iefix") format('embedded-opentype'), url("/fonts/OpenSans/OpenSans-Light-webfont.woff") format('woff'), url("/fonts/OpenSans/OpenSans-Light-webfont.ttf") format('truetype'), url("/fonts/OpenSans/OpenSans-Light-webfont.svg#open_sanslight") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'open_sanssemibold';
+  src: url("/fonts/OpenSans/OpenSans-Semibold-webfont.eot");
+  src: url("/fonts/OpenSans/OpenSans-Semibold-webfont.eot?#iefix") format('embedded-opentype'), url("/fonts/OpenSans/OpenSans-Semibold-webfont.woff") format('woff'), url("/fonts/OpenSans/OpenSans-Semibold-webfont.ttf") format('truetype'), url("/fonts/OpenSans/OpenSans-Semibold-webfont.svg#open_sanssemibold") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.transBg {
+  background: url("/images/back.png") repeat;
+}
+html {
+  height: 100%;
+  width: 100%;
+}
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  height: 100%;
+  width: 100%;
+  font-family: 'open_sansregular';
 }
-a {
-  color: #00b7ff;
+body {
+  background: url("/images/home.jpg") repeat;
+  background-size: cover;
 }
-h1 {
-  font-size: 40px;
-  color: #666;
+header {
+  padding: 12px 0;
+  background: url("/images/back.png") repeat;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+img.backImg {
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+a.logo {
+  display: inline-block;
+  margin-top: 5px;
+}
+.userInfo span {
+  display: block;
+}
+.loginWrap img {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+}
+.loginWrap .userInfo {
+  margin: 5px 0 0 8px;
+}
+.loginWrap .userName {
+  color: #fff;
+}
+.loginWrap .userDesign {
+  color: #ccc;
+}
+.mainWrap {
+  padding: 65px 0 30px 0;
+  position: relative;
+}
+footer {
+  height: 30px;
+  z-index: 1;
+  background: #fff;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.loginContainer {
+  max-width: 400px;
+  margin: 200px auto;
+  padding: 30px;
+  background: url("/images/back.png") repeat;
+  border-radius: 5px;
+}
+.loginFormContainer h3 {
+  text-align: center;
+  color: #fff;
+  margin: 0 0 20px;
+}
+.control {
+  margin-bottom: 10px;
+}
+.checkBoxLabel {
+  position: relative;
+  color: #fff;
+  padding-left: 20px;
+  margin-bottom: 10px;
+}
+.checkBoxLabel input[type="checkbox"] {
+  position: absolute;
+  left: 0;
 }
