--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html
             div.loginWrap.clearfix.pull-right
                 img(src='/images/pic.jpg',alt='user image').pull-left
                 div.userInfo.pull-right
-                    span.userName Unmesh R Dusane
+                    span.userName U R Dusane
                     span.userDesign Front End Developer
 
 
