Working on User KRA form

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/vendor/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/user.css')
+    script(type='text/javascript' src='js/vendor/jquery-1.11.0.min.js')
+    script(type='text/javascript' src='js/vendor/jquery-migrate-1.2.1.min.js')
+    script(type='text/javascript' src='js/custom.js')
   body
     header.mainHeader
         div.container
