created KRA create page

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -16,16 +16,22 @@ block content
                     |  completed his
                     b  KRA
                     |  assessment for
-                    b  Business Analyst Grade - A on 20/06/2014
+                    b  Software Engineer Grade - A on 20/06/2014
 
 
                 li
                    p
-                   b Harshal
+                   b Omkar
                    |  completed his
                    b  KRA
                    |  assessment for
-                   b  Business Analyst Grade - A on 20/06/2014
+                   b  Business Analyst Grade - A on 20/02/2014
 
-
+                li
+                    p
+                    b Unmesh
+                    |  completed his
+                    b  KRA
+                    |  assessment for
+                    b  Front End  Grade - A on 20/01/2014
 
