--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,8 +42,6 @@ body {
   height: 100%;
   width: 100%;
   font-family: "open_sansregular";
-}
-body {
   background: url("/images/home.jpg") repeat;
   background-size: cover;
 }
@@ -53,6 +51,27 @@ header {
   position: fixed;
   width: 100%;
   z-index: 1;
+}
+.breadcum {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 68px;
+  width: 50px;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+}
+.breadcum .icon-bar {
+  margin: 0 auto;
+  width: 30px;
+  height: 5px;
+  margin-top: 8px;
+  background: #fff;
+  display: block;
+}
+.breadcum .icon-bar:first-child {
+  margin-top: 20px;
 }
 img.backImg {
   width: 100%;
@@ -123,7 +142,7 @@ footer {
   padding: 20px;
 }
 .mainHeading {
-  color: #693;
+  color: #fff;
   font-family: "open_sanssemibold";
   margin: 0 0 20px;
 }
@@ -141,9 +160,18 @@ footer {
   padding: 10px;
 }
 .activityWrap h3 {
-  color: #0cf;
+  color: #693;
   margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #693;
 }
 .actvityList li {
   font-size: 16px;
+}
+.createForm {
+  width: 600px;
+  margin: 50px auto;
+}
+.btnCancel {
+  margin-left: 10px;
 }
