--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -46,10 +46,8 @@ body
   height:100%
   width:100%
   font-family: "open_sansregular";
-
-body
-    background:url("/images/home.jpg") repeat;
-    background-size:cover;
+  background:url("/images/home.jpg") repeat;
+  background-size:cover;
 
 header
   padding:12px 0
@@ -57,6 +55,25 @@ header
   position:fixed
   width:100%
   z-index:1
+
+.breadcum
+    position:absolute
+    top:0
+    left:0
+    height:68px
+    width:50px
+    display:block
+    text-align:center
+    cursor:pointer
+    .icon-bar
+        margin:0 auto
+        width:30px
+        height:5px
+        margin-top:8px
+        background:#fff
+        display:block
+    .icon-bar:first-child
+        margin-top:20px
 
 img.backImg
     width:100%
@@ -128,7 +145,7 @@ footer
     padding:20px
 
 .mainHeading
-    color:#669933
+    color:#fff
     font-family:"open_sanssemibold"
     margin:0 0 20px
 
@@ -145,8 +162,18 @@ footer
     background:#fff
     padding:10px
     h3
-        color:#00ccff;
+        color:#693
         margin-bottom:10px
+        padding-bottom:10px
+        border-bottom:1px solid #693
 
 .actvityList li
     font-size:16px
+
+.createForm
+    width:600px
+    margin:50px auto
+
+.btnCancel
+    margin-left:10px
+
