--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html
     link(rel='stylesheet', href='/stylesheets/user.css')
     script(type='text/javascript' src='js/vendor/jquery-1.11.0.min.js')
     script(type='text/javascript' src='js/vendor/jquery-migrate-1.2.1.min.js')
+    script(type='text/javascript' src='js/vendor/jquery.cycle2.js')
     script(type='text/javascript' src='js/custom.js')
   body
     header.mainHeader
