--- a/public/stylesheets/user.css
+++ b/public/stylesheets/user.css
@@ -15,14 +15,30 @@
   border-radius: 5px;
 }
 .quastionWrap {
-  height: 250px;
+  height: 300px;
 }
 .qustWrap {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
   background: #fff;
   padding: 20px;
+}
+.ansWrap li {
+  float: left;
+  background: #39c;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  padding: 0 10px;
+  height: 30px;
+  line-height: 30px;
+  width: 18.3%;
+  margin-left: 2%;
+  color: #fff;
+}
+.ansWrap li:first-child {
+  margin-left: 0;
 }
 .ansWrap input {
   opacity: 0;
@@ -31,10 +47,25 @@
   width: 23px;
   padding: 0;
   margin: 0;
+  vertical-align: top;
+}
+.ansWrap label {
+  width: 85%;
+  padding-left: 5px;
+  margin: 0;
 }
 .radioWrap {
   background: url("/images/radio.png") left top no-repeat;
 }
 .radioWrap.checked {
   background-position: left -90px;
+}
+.btnWrap {
+  margin: 20px 0;
+}
+.btnWrap .btn {
+  margin-left: 20px;
+}
+.btnWrap .btn:first-child {
+  margin-left: 0;
 }
