--- a/public/stylesheets/user.styl
+++ b/public/stylesheets/user.styl
@@ -17,21 +17,38 @@ border-radius()
 	border-radius(5px)
 
 .quastionWrap
-	height: 250px
+	height: 300px
 
 .qustWrap
-	border-radius(5px)
+	border-radius(10px)
 	background: #fff
 	padding: 20px
 
-.ansWrap input
-	opacity: 0
-	display: inline-block
-	height: 23px
-	width: 23px
-	padding: 0
-	margin: 0	
-
+.ansWrap
+	li 	
+		float: left
+		background: #3399cc
+		border-radius(10px)
+		padding: 0 10px
+		height: 30px
+		line-height: 30px;
+		width: 18.3%
+		margin-left: 2%
+		color: #fff
+	li:first-child
+		margin-left: 0
+	input
+		opacity: 0
+		display: inline-block
+		height: 23px
+		width: 23px
+		padding: 0
+		margin: 0
+		vertical-align: top	
+	label
+		width: 85%
+		padding-left: 5px
+		margin: 0
 
 .radioWrap
 	background: url(/images/radio.png) left top no-repeat
@@ -39,3 +56,10 @@ border-radius()
 
 .radioWrap.checked 
 	background-position: left -90px 
+
+.btnWrap
+	margin: 20px 0
+	.btn
+		margin-left: 20px
+	.btn:first-child
+		margin-left: 0
