--- a/views/userKra.jade
+++ b/views/userKra.jade
@@ -12,18 +12,25 @@ block content
 				p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis velit ac felis imperdiet, eget dignissim ante feugiat. Fusce molestie iaculis ipsum, in fringilla felis sodales vel. Vestibulum fringilla dui est, eu hendrerit lorem egestas eu. Suspendisse ornare libero in odio tristique, eget efficitur dui fermentum. Etiam auctor, dui vitae cursus porttitor, arcu urna condimentum enim, quis hendrerit felis est in orci. Praesent non nisl at mauris blandit rhoncus id a elit?
 		
 		div.ansWrap
-			ul
+			ul.clearfix
 				li
-					input(type="radio", name="ans")
+					input(type="radio", name="ans", value="1", id="1")
 				li
-					input(type="radio", name="ans")
+					input(type="radio", name="ans", value="2", id="2")
 				li
-					input(type="radio", name="ans")
+					input(type="radio", name="ans", value="3", id="3")
 				li
-					input(type="radio", name="ans")
+					input(type="radio", name="ans", value="4", id="4")
 				li
-					input(type="radio", name="ans")
-        
+					input(type="radio", name="ans", value="5", id="5")
+    
+	div.btnWrap
+		div.row
+			div.col-md-6
+				button.btn.btn-lg.btn-success.btn-primary(type="submit") Prev
+				button.btn.btn-lg.btn-success.btn-primary(type="submit") Next
+			div.col-md-6.text-right
+				button.btn.btn-lg.btn-success.btn-primary(type="submit") Save & Exit
 
 
 
