working on slider

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     script(type='text/javascript' src='js/vendor/jquery-1.11.0.min.js')
     script(type='text/javascript' src='js/vendor/jquery-migrate-1.2.1.min.js')
     script(type='text/javascript' src='js/vendor/jquery.cycle2.js')
+    script(type='text/javascript' src='js/vendor/jquery.cycle2.carousel.js')
     script(type='text/javascript' src='js/custom.js')
   body
     header.mainHeader
@@ -25,3 +26,4 @@ html
     <!-- img(src='images/bgImg.jpg').backImg -->
     div.container.mainWrap
         block content
+    block fullWidth
