--- a/views/userKra.jade
+++ b/views/userKra.jade
@@ -4,12 +4,34 @@ block content
 	div.progressWrap
 		div.progressBar
 
+block fullWidth
 	div.cycle-slideshow(
-		data-cycle-fx='scrollHorz', 
-		data-cycle-timeout='0', 
-		data-cycle-slides='> section',
-		data-cycle-prev=".prev",
-    	data-cycle-next=".next")
+	data-cycle-fx='carousel',
+	data-cycle-timeout='0', 
+	data-cycle-slides='> section',
+	data-cycle-carousel-fluid='true',
+	data-cycle-prev=".prev",
+	data-cycle-next=".next",
+	data-cycle-carousel-visible="3")
+		section.middleContent
+			h2.mainHeading Design Execution
+			div.quastionWrap
+				div.qustWrap
+					b Q1 
+					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi iaculis velit ac felis imperdiet, eget dignissim ante feugiat. Fusce molestie iaculis ipsum, in fringilla felis sodales vel. Vestibulum fringilla dui est, eu hendrerit lorem egestas eu. Suspendisse ornare libero in odio tristique, eget efficitur dui fermentum. Etiam auctor, dui vitae cursus porttitor, arcu urna condimentum enim, quis hendrerit felis est in orci. Praesent non nisl at mauris blandit rhoncus id a elit?
+			
+			div.ansWrap
+				ul
+					li
+						input(type="radio", name="ans")
+					li
+						input(type="radio", name="ans")
+					li
+						input(type="radio", name="ans")
+					li
+						input(type="radio", name="ans")
+					li
+						input(type="radio", name="ans")
 		section.middleContent
 			h2.mainHeading Design Execution
 			div.quastionWrap
