KRA steps created

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -180,7 +180,21 @@ footer
 .createForm
     width:600px
     margin:50px auto
+    textarea
+        min-height:100px
+        resize:none
 
 .btnCancel
     margin-left:10px
+.qeditWrapper
+    position:relative
+    span
+        position:absolute;
+        right:-10px;
+        background:url("/images/cancel_icon_black.png");
+        width:20px
+        height:20px
+        top:0
+        cursor:pointer
+
 
