--- a/views/createkra.jade
+++ b/views/createkra.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
     section.middleContent
+       h2.mainHeading Create KRA
        div.activityWrap
             h3 Step 1
             form.createForm.form-group(method="post")
@@ -29,8 +30,9 @@ block content
                             option Grade D
 
                 div.form-group.clearfix
-                    button.btn.pull-left Next
-                    button.btn.pull-left.btnCancel Cancel
+                    button.btn.pull-right.btnCancel.btn-primary Cancel
+                    button.btn.pull-right.btn-primary Next
+
 
 
 
