--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,6 +179,22 @@ footer {
   width: 600px;
   margin: 50px auto;
 }
+.createForm textarea {
+  min-height: 100px;
+  resize: none;
+}
 .btnCancel {
   margin-left: 10px;
+}
+.qeditWrapper {
+  position: relative;
+}
+.qeditWrapper span {
+  position: absolute;
+  right: -10px;
+  background: url("/images/cancel_icon_black.png");
+  width: 20px;
+  height: 20px;
+  top: 0;
+  cursor: pointer;
 }
