data error handle

--- a/public/stylesheets/user.css
+++ b/public/stylesheets/user.css
@@ -1,6 +1,14 @@
+.cycle-slideshow {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
 .cycle-slideshow .middleContent {
   height: 450px;
   width: 1140px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
 }
 .progressWrap {
   height: 15px;
