--- a/public/stylesheets/user.styl
+++ b/public/stylesheets/user.styl
@@ -3,9 +3,12 @@ border-radius()
   -moz-border-radius arguments
   border-radius arguments
 
+.cycle-slideshow
+	border-radius(10px)
 .cycle-slideshow .middleContent 
 	height: 450px
 	width: 1140px
+	border-radius(0)
 
 .progressWrap
 	height: 15px
