idea folder deleted

--- a/views/createkra.jade
+++ b/views/createkra.jade
@@ -5,7 +5,7 @@ block content
        h2.mainHeading Create KRA
        div.activityWrap
             h3 Step 1
-            form.createForm.form-group(method="post")
+            form.createForm.form-group(method="post" action="/createKra")
                 div.form-group
                     label.control-label Name
                     div.control
