--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
     section.middleContent
+        a(href="/createKra") create KRA
         h2.mainHeading Admin dashboard
 
         div.aprStart
