--- a/views/login.jade
+++ b/views/login.jade
@@ -8,7 +8,7 @@ block content
                 div.control
                     input(type="text",placeholder="Username",name="userName").form-control
                 div.control
-                    input(type="text",placeholder="password",name="password").form-control
+                    input(type="password",placeholder="password",name="password").form-control
                 label.checkBoxLabel
                     input(type="checkbox" value="remember-me")
                     | Remember me
