form slider check

--- a/public/stylesheets/user.css
+++ b/public/stylesheets/user.css
@@ -2,6 +2,7 @@
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
+  overflow: hidden;
 }
 .cycle-slideshow .middleContent {
   height: 450px;
