--- a/public/stylesheets/user.styl
+++ b/public/stylesheets/user.styl
@@ -5,6 +5,8 @@ border-radius()
 
 .cycle-slideshow
 	border-radius(10px)
+	overflow: hidden
+
 .cycle-slideshow .middleContent 
 	height: 450px
 	width: 1140px
