working on issue of kra creation

--- a/views/createkra1.jade
+++ b/views/createkra1.jade
@@ -5,7 +5,7 @@ block content
        h2.mainHeading Create KRA
        div.activityWrap
             h3 Step 2
-            form.createForm.form-group.form-horizontal(method="post")
+            form.createForm.form-group.form-horizontal(method="post",post='/questions')
                 div.form-group
                     label.col-sm-2.control-label Question 1
                     div.control.col-sm-10.qeditWrapper
