--- a/public/stylesheets/user.styl
+++ b/public/stylesheets/user.styl
@@ -25,24 +25,32 @@ border-radius()
 	border-radius(5px)
 
 .quastionWrap
-	height: 300px
+	height: 165px
 
 .qustWrap
 	border-radius(10px)
 	background: #fff
 	padding: 20px
+	position: relative
+	b
+		position: absolute
+		top: 20px
+		left: 20px
+	p
+		padding-left: 30px
 
 .ansWrap
+	margin: 0 15px 15px 0
+	float: left
+	width: 200px
 	li 	
-		float: left
 		background: #3399cc
 		border-radius(10px)
 		padding: 0 10px
 		height: 30px
-		line-height: 30px;
-		width: 18.3%
-		margin-left: 2%
+		line-height: 30px;		
 		color: #fff
+		margin-bottom: 10px
 	li:first-child
 		margin-left: 0
 	input
@@ -57,6 +65,20 @@ border-radius()
 		width: 85%
 		padding-left: 5px
 		margin: 0
+
+.commentWrap
+	float: left
+	width: 885px 
+	color: #e1e1e1
+	font-size: 12px
+	textarea
+		border-radius(10px)
+		height: 140px
+		width: 99.5%
+		padding: 10px
+		margin-bottom: 12px
+		background: #e1e1e1
+		color: #000
 
 .radioWrap
 	background: url(/images/radio.png) left top no-repeat
