--- a/views/createkra1.jade
+++ b/views/createkra1.jade
@@ -9,20 +9,20 @@ block content
                 div.form-group
                     label.col-sm-2.control-label Question 1
                     div.control.col-sm-10.qeditWrapper
-                         textarea.form-control
+                         textarea(name="question1").form-control
                          span.deleteBtn
 
 
                 div.form-group
                     label.col-sm-2.control-label Question 2
                     div.control.col-sm-10.qeditWrapper
-                         textarea.form-control
+                         textarea(name="question2").form-control
                          span.deleteBtn
 
                 div.form-group
                     label.col-sm-2.control-label Question 3
                     div.control.col-sm-10.qeditWrapper
-                        textarea.form-control
+                        textarea(name="question3").form-control
                         span.deleteBtn
 
                  div.form-group
